// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 1`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 2`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 3`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
        <B key="b">
        <C key="c">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 4`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <B key="b">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 5`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 6`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 7`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 8`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
        <B key="b">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 9`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 10`] = `
[root]
  ▾ <Root>
      <X>
      <Suspense>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 11`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <B key="b">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense (Legacy Mode) 12`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 1`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 2`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 3`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <A key="a">
          <B key="b">
          <C key="c">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 4`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <C key="c">
          <B key="b">
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 5`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <C key="c">
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 6`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <C key="c">
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 7`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <C key="c">
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 8`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <A key="a">
          <B key="b">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 9`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 10`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 11`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <B key="b">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 12`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
      ▾ <MaybeSuspend>
          <A key="a">
          <Z>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 13`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 14`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 15`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
        <B key="b">
        <C key="c">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 16`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <B key="b">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 17`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 18`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 19`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <C key="c">
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 20`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
        <B key="b">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 21`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 22`] = `
[root]
  ▾ <Root>
      <X>
      <Suspense>
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 23`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <B key="b">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test for Suspense without type change (Legacy Mode) 24`] = `
[root]
  ▾ <Root>
      <X>
    ▾ <Suspense>
        <A key="a">
      <Y>
`;

exports[`StoreStress (Legacy Mode) should handle a stress test with different tree operations (Legacy Mode): 1: abcde 1`] = `
[root]
  ▾ <Parent>
      <A key="a">
      <B key="b">
      <C key="c">
      <D key="d">
      <E key="e">
`;

exports[`StoreStress (Legacy Mode) should handle a stress test with different tree operations (Legacy Mode): 2: abxde 1`] = `
[root]
  ▾ <Parent>
      <A key="a">
      <B key="b">
    ▾ <C key="c">
        <X>
      <D key="d">
      <E key="e">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 1`] = `
[root]
  ▾ <Root>
      <A key="a">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 2`] = `
[root]
  ▾ <Root>
      <B key="b">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 3`] = `
[root]
  ▾ <Root>
      <C key="c">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 4`] = `
[root]
  ▾ <Root>
      <D key="d">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 5`] = `
[root]
  ▾ <Root>
      <E key="e">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 6`] = `
[root]
  ▾ <Root>
      <A key="a">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 7`] = `
[root]
  ▾ <Root>
      <B key="b">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 8`] = `
[root]
  ▾ <Root>
      <C key="c">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 9`] = `
[root]
  ▾ <Root>
      <D key="d">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 10`] = `
[root]
  ▾ <Root>
      <E key="e">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 11`] = `
[root]
  ▾ <Root>
      <A key="a">
      <B key="b">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 12`] = `
[root]
  ▾ <Root>
      <B key="b">
      <A key="a">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 13`] = `
[root]
  ▾ <Root>
      <B key="b">
      <C key="c">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 14`] = `
[root]
  ▾ <Root>
      <C key="c">
      <B key="b">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 15`] = `
[root]
  ▾ <Root>
      <A key="a">
      <C key="c">
`;

exports[`StoreStress (Legacy Mode) should handle stress test with reordering (Legacy Mode) 16`] = `
[root]
  ▾ <Root>
      <C key="c">
      <A key="a">
`;
